--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
     background-color: #f4f4f4;
 }
 
+body h1, h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .container {
     max-width: 800px;
     margin: 0 auto;
